--- a/roles/firth-packages/tasks/main.yml
+++ b/roles/firth-packages/tasks/main.yml
@@ -10,7 +10,29 @@
 - name: Add PHP PPA
   ansible.builtin.apt_repository:
     repo: ppa:ondrej/php
+    state: absent
+  tags: php
+
+- name: Get Launchpad PPA Info
+  ansible.builtin.uri:
+    url: "https://api.launchpad.net/devel/~ondrej/+archive/ubuntu/php"
+    return_content: yes
+    method: GET
+    headers:
+      Accept: "application/json"
+  register: ondrej_php_ppa_info
+  tags: php
+
+- name: Manage PHP PPA repository (deb822_repository)
+  become: true
+  ansible.builtin.deb822_repository:
     state: present
+    name: "ondrej-ubuntu-php-{{ansible_distribution_release}}"
+    types: [deb]
+    uris: [https://ppa.launchpadcontent.net/ondrej/php/ubuntu]
+    suites: ["{{ ansible_facts['distribution_release'] }}"]
+    components: [main]
+    signed_by: "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x{{  ondrej_php_ppa_info.json.signing_key_fingerprint  }}"
   tags: php
 
 - name: Remove old PHP Packages
