--- a/roles/firth-docker/tasks/main.yml
+++ b/roles/firth-docker/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
 - name: Configure Docker installation and services
+  tags:
+    - docker
   block:
     - name: Add GPG key
       ansible.builtin.apt_key:
@@ -74,48 +76,48 @@
         - redis
 
     - name: Make redis service more robust so it waits for docker to start
-      block:
-        - name: Force redis service to wait longer between restarts
-          community.general.ini_file:
-            path: /etc/systemd/system/redis.service
-            exclusive: false
-            section: Service
-            option: RestartSec
-            value: 30
-            create: yes
-            state: present
-
-        - name: Force redis service to allow more restarts in a time period
-          community.general.ini_file:
-            path: /etc/systemd/system/redis.service
-            exclusive: false
-            section: Unit
-            option: StartLimitInterval
-            value: 300
-            create: yes
-            state: present
-
-        - name: Force redis service to allow more restarts in a time period
-          community.general.ini_file:
-            path: /etc/systemd/system/redis.service
-            exclusive: false
-            section: Unit
-            option: StartLimitBurst
-            value: 10
-            create: yes
-            state: present
       notify:
         - Reload systemd
         - Restart redis
       tags:
         - redis
 
+      block:
+        - name: Force redis service to wait longer between restarts
+          community.general.ini_file:
+            path: /etc/systemd/system/redis.service
+            mode: "0644"
+            exclusive: false
+            section: Service
+            option: RestartSec
+            value: 30
+            create: true
+            state: present
+
+        - name: Force redis service to allow more restarts in a time period
+          community.general.ini_file:
+            path: /etc/systemd/system/redis.service
+            mode: "0644"
+            exclusive: false
+            section: Unit
+            option: StartLimitInterval
+            value: 300
+            create: true
+            state: present
+
+        - name: Force redis service to allow more restarts in a time period
+          community.general.ini_file:
+            path: /etc/systemd/system/redis.service
+            mode: "0644"
+            exclusive: false
+            section: Unit
+            option: StartLimitBurst
+            value: 10
+            create: true
+            state: present
       rescue:
         - name: Debug failure to modify redis service
           ansible.builtin.debug:
             msg: "Failed to modify redis service to be more robust"
           tags:
             - redis
-
-  tags:
-    - docker
