--- a/roles/firth-packages/tasks/main.yml
+++ b/roles/firth-packages/tasks/main.yml
@@ -16,7 +16,7 @@
 - name: Get Launchpad PPA Info
   ansible.builtin.uri:
     url: "https://api.launchpad.net/devel/~ondrej/+archive/ubuntu/php"
-    return_content: yes
+    return_content: true
     method: GET
     headers:
       Accept: "application/json"
@@ -27,12 +27,12 @@
   become: true
   ansible.builtin.deb822_repository:
     state: present
-    name: "ondrej-ubuntu-php-{{ansible_distribution_release}}"
+    name: "ondrej-ubuntu-php-{{ ansible_distribution_release }}"
     types: [deb]
     uris: [https://ppa.launchpadcontent.net/ondrej/php/ubuntu]
     suites: ["{{ ansible_facts['distribution_release'] }}"]
     components: [main]
-    signed_by: "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x{{  ondrej_php_ppa_info.json.signing_key_fingerprint  }}"
+    signed_by: "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x{{  ondrej_php_ppa_info.json.signing_key_fingerprint }}"
   tags: php
 
 - name: Remove old PHP Packages
