Add Route53 configuration for SFTP server

--- a/roles/firth-dns/tasks/main.yml
+++ b/roles/firth-dns/tasks/main.yml
@@ -116,6 +116,7 @@
     - aws
     - istic_net
     - istic_sys
+    - sftp
 
 - name: Update Route53 for nanocountdown
   ansible.builtin.include_tasks: zones/nanocountdown.yml
