--- a/roles/firth-sftp-docker/handlers/main.yml
+++ b/roles/firth-sftp-docker/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 # handlers file for roles/firth-sftp-docker
 
-- name: restart sftp docker
+- name: Restart sftp docker
   ansible.builtin.command: docker-compose up -d
   args:
     chdir: "{{ docker_root }}/sftp"
