Clean up test.yml by removing redundant role declaration and fix comment formatting in main.yml

--- a/roles/firth-sftp-docker/vars/main.yml
+++ b/roles/firth-sftp-docker/vars/main.yml
@@ -13,5 +13,5 @@
 #       - source: /data/user1/docs
 #         target: docs
 #         read_only: true
-# Encrypt passwords can be generated with:
+# Encrypted passwords can be generated with:
 #  echo -n "your-password" | docker run -i --rm atmoz/makepasswd --crypt-md5 --clearfrom=-
