Add requirements_file parameter to ansible-lint step in workflow

--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -17,3 +17,5 @@ jobs:
         run: rm ansible.cfg
       - name: Lint Ansible Playbook
         uses: ansible/ansible-lint@v6
+        with:
+          requirements_file: ./requirements.yml
