Enhance MySQL backup process with logging and Datadog integration

--- a/roles/global_things/handlers/main.yml
+++ b/roles/global_things/handlers/main.yml
@@ -28,3 +28,8 @@
 - name: Reload systemd
   ansible.builtin.systemd_service:
     daemon_reload: true
+
+- name: Restart datadog-agent
+  ansible.builtin.service:
+    name: datadog-agent
+    state: restarted
