--- a/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -153,7 +153,7 @@
 
 - name: Send mysql backup log to datadog
   ansible.builtin.copy:
-    dest: /etc/dd-agent/conf.d/mysql_backup.yaml
+    dest: /etc/datadog-agent/conf.d/mysql_backup.yaml
     content: |
       # Send MySQL backup  logs to Datadog
       # Managed by Ansible - roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -163,4 +163,6 @@
           service: mysql_backup
           source: mysql_backup
   notify: Restart datadog-agent
-  tags: mysql_backup
+  tags:
+    - mysql_backup
+    - datadog
