--- a/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -1,152 +1,194 @@
 ---
 # Install Mysql
 
-- name: Determine required MySQL Python libraries.
-  ansible.builtin.set_fact:
-    deb_mysql_python_package: "{% if 'python3' in ansible_python_interpreter | default('') %}python3-mysqldb{% else %}python-mysqldb{% endif %}"
-  tags: mysql_user
-
-- name: Ensure Maria & MySQL Python libraries are installed.
-  ansible.builtin.apt:
-    state: present
-    pkg:
-      - "{{ deb_mysql_python_package }}"
-      - mariadb-server
-      - moreutils
-      - python3-mysqldb
-      - python3-pymysql
-  tags: mysql_user
-
-# Set root password
-- name: Set Root Password
-  community.mysql.mysql_user:
-    name: root
-    password: "{{ mysql_root_password }}"
-    check_implicit_admin: true
-    login_host: "{{ mysql_host }}"
-  tags: mysql_user
-
-- name: Setup root user
-  community.general.ini_file:
-    dest: /root/.my.cnf
-    section: client
-    option: user
-    value: root
-    mode: "0600"
-    backup: true
-
-- name: Setup root user's password
-  community.general.ini_file:
-    dest: /root/.my.cnf
-    section: client
-    option: password
-    value: "{{ mysql_root_password }}"
-    mode: "0600"
-    backup: true
+- name: Install MySQL and configure root user
+  tags:
+    - mysql_user
 
 # Setup backups
 
-- name: Setup backup locations
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: directory
-    mode: "0755"
-  loop:
-    - "{{ mysql_backup_location }}"
-    - "{{ mysql_backup_location }}/Daily"
-    - "{{ mysql_backup_location }}/Monthly"
+  block:
+    - name: Determine required MySQL Python libraries.
+      ansible.builtin.set_fact:
+        deb_mysql_python_package: "{% if 'python3' in ansible_python_interpreter | default('') %}python3-mysqldb{% else %}python-mysqldb{% endif %}"
 
-- name: Move Daily backups to new directory
-  ansible.builtin.command:
-    cmd: mv /var/backups/mysql/{{ item }} /var/backups/mysql/Daily/{{ item }}
-    removes: /var/backups/mysql/{{ item }}
-  loop:
-    - Monday
-    - Tuesday
-    - Wednesday
-    - Thursday
-    - Friday
-    - Saturday
-    - Sunday
+    - name: Ensure Maria & MySQL Python libraries are installed.
+      ansible.builtin.apt:
+        state: present
+        pkg:
+          - "{{ deb_mysql_python_package }}"
+          - mariadb-server
+          - moreutils
+          - python3-mysqldb
+          - python3-pymysql
 
-- name: Move Monthly backups to new directory
-  ansible.builtin.command:
-    cmd: mv /var/backups/mysql/{{ item }} /var/backups/mysql/Monthly/{{ item }}
-    removes: /var/backups/mysql/{{ item }}
-  loop:
-    - January
-    - February
-    - March
-    - April
-    - May
-    - June
-    - July
-    - August
-    - September
-    - October
-    - November
-    - December
+    # Set root password
+    - name: Set Root Password
+      community.mysql.mysql_user:
+        name: root
+        password: "{{ mysql_root_password }}"
+        check_implicit_admin: true
+        login_host: "{{ mysql_host }}"
 
-- name: Setup backup script
-  ansible.builtin.template:
-    src: mysql_backup.sh
-    dest: /usr/local/bin/mysql_backup.sh
-    mode: "0755"
+    - name: Setup root user my.cnf username
+      community.general.ini_file:
+        dest: /root/.my.cnf
+        section: client
+        option: user
+        value: root
+        mode: "0600"
+        backup: true
 
-- name: Setup daily backup
-  ansible.builtin.cron:
-    name: mysql_backup_daily
-    minute: "16"
-    hour: "3"
-    user: root
-    job: /usr/local/bin/mysql_backup.sh Daily/`date +%A` | ts > /var/log/mysql/mysql_backup.log
-    cron_file: mysql_backup_daily
+    - name: Setup root user's my.cnf password
+      community.general.ini_file:
+        dest: /root/.my.cnf
+        section: client
+        option: password
+        value: "{{ mysql_root_password }}"
+        mode: "0600"
+        backup: true
 
-- name: Setup monthly backup
-  ansible.builtin.cron:
-    name: mysql_backup_monthly
-    minute: "16"
-    hour: "0"
-    day: "1"
-    user: root
-    job: /usr/local/bin/mysql_backup.sh Monthly/`date +%B` | ts > /var/log/mysql/mysql_backup.log
-    cron_file: mysql_backup_monthly
+  rescue:
+    - name: Debug MySQL installation failure
+      ansible.builtin.debug:
+        msg: "Failed to install MySQL or configure root user. Check mysql_root_password variable and network connectivity."
 
-- name: Ensure MySQL log directory exists
-  ansible.builtin.file:
-    path: /var/log/mysql
-    state: directory
-    mode: "0755"
-    owner: mysql
-    group: mysql
-  tags: mysql_backup
+    - name: Check MySQL service status
+      ansible.builtin.service:
+        name: mariadb
+      register: mysql_service_status
+      ignore_errors: true
 
-- name: Rotate MySQL backup log
-  ansible.builtin.copy:
-    dest: /etc/logrotate.d/mysql_backup
-    content: |
-      /var/log/mysql/mysql_backup.log {
-          weekly
-          rotate 12
-          compress
-          missingok
-          notifempty
-          create 640 mysql mysql
-          sharedscripts
-          postrotate
-              /usr/bin/killall -HUP mysqld
-          endscript
-      }
-  tags: mysql_backup
+    - name: Display MySQL service status
+      ansible.builtin.debug:
+        var: mysql_service_status
 
-- name: Ensure logrotate is installed
-  ansible.builtin.apt:
-    name: logrotate
-    state: present
-  tags: mysql_backup
+- name: Setup MySQL backup system
+  tags:
+    - mysql_backup
+  block:
+    - name: Ensure logrotate is installed
+      ansible.builtin.apt:
+        name: logrotate
+        state: present
 
-- name: Ensure ts command is available
-  ansible.builtin.apt:
-    name: moreutils
-    state: present
-  tags: mysql_backup
+    - name: Ensure ts command is available
+      ansible.builtin.apt:
+        name: moreutils
+        state: present
+
+    - name: Setup backup locations
+      ansible.builtin.file:
+        path: "{{ item }}"
+        state: directory
+        mode: "0755"
+      loop:
+        - "{{ mysql_backup_location }}"
+        - "{{ mysql_backup_location }}/Daily"
+        - "{{ mysql_backup_location }}/Monthly"
+
+    - name: Move Daily backups to new directory
+      ansible.builtin.command:
+        cmd: mv /var/backups/mysql/{{ item }} /var/backups/mysql/Daily/{{ item }}
+        removes: /var/backups/mysql/{{ item }}
+      loop:
+        - Monday
+        - Tuesday
+        - Wednesday
+        - Thursday
+        - Friday
+        - Saturday
+        - Sunday
+
+    - name: Move Monthly backups to new directory
+      ansible.builtin.command:
+        cmd: mv /var/backups/mysql/{{ item }} /var/backups/mysql/Monthly/{{ item }}
+        removes: /var/backups/mysql/{{ item }}
+      loop:
+        - January
+        - February
+        - March
+        - April
+        - May
+        - June
+        - July
+        - August
+        - September
+        - October
+        - November
+        - December
+
+    - name: Setup backup script
+      ansible.builtin.template:
+        src: mysql_backup.sh
+        dest: /usr/local/bin/mysql_backup.sh
+        mode: "0755"
+
+    - name: Setup daily backup
+      ansible.builtin.cron:
+        name: mysql_backup_daily
+        minute: "16"
+        hour: "3"
+        user: root
+        job: /usr/local/bin/mysql_backup.sh Daily/`date +%A` | ts > /var/log/mysql/mysql_backup.log
+        cron_file: mysql_backup_daily
+
+    - name: Setup monthly backup
+      ansible.builtin.cron:
+        name: mysql_backup_monthly
+        minute: "16"
+        hour: "0"
+        day: "1"
+        user: root
+        job: /usr/local/bin/mysql_backup.sh Monthly/`date +%B` | ts > /var/log/mysql/mysql_backup.log
+        cron_file: mysql_backup_monthly
+
+    - name: Ensure MySQL log directory exists
+      ansible.builtin.file:
+        path: /var/log/mysql
+        state: directory
+        mode: "0755"
+        owner: mysql
+        group: mysql
+
+    - name: Rotate MySQL backup log
+      ansible.builtin.copy:
+        dest: /etc/logrotate.d/mysql_backup
+        content: |
+          /var/log/mysql/mysql_backup.log {
+              weekly
+              rotate 12
+              compress
+              missingok
+              notifempty
+              create 640 mysql mysql
+              sharedscripts
+              postrotate
+                  /usr/bin/killall -HUP mysqld
+              endscript
+          }
+
+  rescue:
+    - name: Debug MySQL backup setup failure
+      ansible.builtin.debug:
+        msg: "Failed to setup MySQL backup system. Check mysql_backup_location variable and filesystem permissions."
+
+    - name: Check backup location permissions
+      ansible.builtin.stat:
+        path: "{{ mysql_backup_location | default('/var/backups/mysql') }}"
+      register: backup_location_stat
+      ignore_errors: true
+
+    - name: Display backup location info
+      ansible.builtin.debug:
+        var: backup_location_stat
+
+    - name: Check if backup template exists
+      ansible.builtin.stat:
+        path: "{{ role_path }}/templates/mysql_backup.sh"
+      register: backup_template_stat
+      ignore_errors: true
+
+    - name: Display template status
+      ansible.builtin.debug:
+        msg: "Backup template exists: {{ backup_template_stat.stat.exists | default(false) }}"
