Set ownership and permissions for MySQL backup log configuration

--- a/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -167,6 +167,9 @@
                   /usr/bin/killall -HUP mysqld
               endscript
           }
+        owner: root
+        group: root
+        mode: "0644"
 
   rescue:
     - name: Debug MySQL backup setup failure
