Update Python and Ansible dependencies in pyproject.toml
- Changed Python version requirement from ^3.10 to >=3.12,<4.0
- Updated Ansible version requirement from ==10.7.* to ==13.*

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,7 +9,7 @@ retry_files_enabled = True
 retry_files_save_path = ~/.ansible-retry
 
 interpreter_python=$VIRTUAL_ENV/bin/python
-
+deprecation_warnings=False
 
 [ssh_connection]
 pipelining = True
