Refactor GitHub CLI repository management to remove old sources.list entry and update repository configuration to use deb822 format

--- a/roles/github-cli/tasks/main.yml
+++ b/roles/github-cli/tasks/main.yml
@@ -15,9 +15,23 @@
   tags:
     - githubcli
 
+- name: Remove old sources.list entry
+  ansible.builtin.file:
+    path: /etc/apt/sources.list.d/cli_github_com_packages.list
+    state: absent
+  tags:
+    - githubcli
+    - package-sources
+
 - name: Add specified repository into sources list
-  ansible.builtin.apt_repository:
-    repo: deb [arch={{ deb_architecture.stdout }} signed-by=/etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main
+  ansible.builtin.deb822_repository:
+    name: github-cli
+    types: [deb]
+    uris: https://cli.github.com/packages
+    suites: [stable]
+    components: [main]
+    architectures: ["{{ deb_architecture.stdout }}"]
+    signed_by: /etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg
     state: present
   tags:
     - githubcli
